p2/confs/app-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-2
  template:
    metadata:
      labels:
        app: app-2
    spec:
      containers:
        - name: hello-kubernetes
          image: paulbouwer/hello-kubernetes:1.10.1
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app-2
spec:
  selector:
    app: app-2
  ports:
    - port: 80
      targetPort: 8080
